# slick

./: Cargo.toml  for_brane.slick  input.slick
examples/: 01_facts.slick  02_tuples.slick  03_nesting_and_parenthesis.slick  04_rules_and_conditions.slick  05_and.slick  06_diff.slick  07_not.slick  08_unknown_truth.slick  09_wildcard.slick  10_parts.slick  11_reflection.slick  12_control_1.slick  13_control_2.slick  14_epistemology.slick  15_epistemology.slick  16_termination_test_fail.slick  17_transitive.slick  17_transitive_closure.slick  18_negative_wildcard.slick  19_wildcard_semantics.slick  20_nested_comments.slick  21_epistemic_tracing.slick  22_big.slick  23_brane.slick  24_ordering.slick  24_sorting.slick  25_modelling_seaso.slick  25_sealing.slick  26_math.slick  28_and_on_both_sides.slick  29_brane_simpler.slick  30_brane_again.slick  31_transitive.slick  32_inequality.slick  33_constants_prefix_keywords.slick  34_killer.slick  crash.slick  integers.slick  integers2.slick  length.slick  (+10 more)
examples/deprecated/: 11_reflection.slick  14_control_3.slick  23_brane.slick  27_slick_sealing.slick
examples/just_act_brane_case_study/: consortium_1.slick
examples/justact_2024/: consortium_1_alt.slick
src/: ast.rs  atomise.rs  atomlike.rs  atoms.rs  bin.rs  check.rs  checking.rs  concrete.rs  config.rs  debug.rs  externalize.rs  ground_atoms.rs  hash.rs  infer.rs  internalize.rs  ir.rs  lang_misc.rs  lexicographic.rs  lib.rs  main.rs  parse.rs  patterns.rs  preprocess.rs  pretty.rs  reflect.rs  smores.rs  test.rs  text.rs  util.rs  withinify.rs
(+4 files in other folders)
