[package]
name = "slick"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nom = "7.1.3"
# combo_iter = { git = "https://github.com/sirkibsirkib/combo_iter.git" }
#chunked_index_set = { git = "https://github.com/sirkibsirkib/chunked_index_set.git" }

[lib]
name = "slick"
path = "src/lib.rs"

[[bin]]
name = "slick"
path = "src/bin.rs"